# projects

./: README.md  raffles.json
automatic-bargain-hunting/: .gitignore  CMakeLists.txt
automatic-bargain-hunting/Project_P1/Prototypes/: CMakeLists.txt
automatic-bargain-hunting/Project_P1/Prototypes/Experimental_prototype/: main.c  menu.c  menu.h  profile_management.c  profile_management.h  utilities.c  utilities.h
automatic-bargain-hunting/Project_P1/Prototypes/Experimental_prototype/Databases/: Cartlist.txt  Products.txt
automatic-bargain-hunting/Project_P1/Prototypes/Project_prototype/: main.c  main.h  run_time.c  run_time.h  store_management.c  store_management.h  utilities.c  utilities.h
automatic-bargain-hunting/Project_P1/Prototypes/Project_prototype/groceries_database/: 0_groceries.txt  1_groceries.txt  2_groceries.txt  4_groceries.txt
automatic-bargain-hunting/Project_P1/Prototypes/Project_prototype/product_database/: shoppinglist.txt
automatic-bargain-hunting/Project_P1/Prototypes/Project_prototype/store_database/: 1_info.txt  2_info.txt  3_info.txt  4_info.txt
automatic-bargain-hunting/Project_P1/Solution/: CMakeLists.txt  main.c  main.h  run_time.c  run_time.h  store_management.c  store_management.h  utilities.c  utilities.h
automatic-bargain-hunting/Project_P1/Solution/groceries_database/: 3_groceries.txt
automatic-bargain-hunting/Project_P1/Solution/product_database/: productslist.txt
automatic-bargain-hunting/Project_P1/Solution/store_database/: 0_info.txt
calculator-mini-project-1/: CMakeLists.txt  README.md
(+14 files in other folders)
